Register and several fixes

--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
@@ -11,3 +11,14 @@ login.password=Password
 login.password.required=Password*
 login.button.login=Login
 login.right.reserved = 2021 All rights reserved
+
+
+#register
+register.email=Email
+register.password=Password
+register.passwordRep=Repeat password
+register.nombre=Name
+register.apellidos=Surname
+register.telefono=Phone number
+register.fechaNacimiento=Birthdate
+register.goToLogin=I've already registered
