--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
@@ -11,3 +11,13 @@ login.password=Contraseña
 login.password.required=Contraseña*
 login.button.login=Entrar
 login.right.reserved = 2021 Todos los derechos reservados
+
+#register
+register.email=Email
+register.password=Contraseña
+register.passwordRep=Repetir contraseña
+register.nombre=Nombre
+register.apellidos=Apellidos
+register.telefono=Teléfono
+register.fechaNacimiento=Fecha de nacimiento
+register.goToLogin=Ya tengo cuenta
