Login fixes and validators for register

--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
@@ -14,10 +14,16 @@ login.right.reserved = 2021 Todos los derechos reservados
 
 #register
 register.email=Email
+register.email.required=Email*
+register.email.invalid=El email no es válido
 register.password=Contraseña
+register.password.required=Contraseña
 register.passwordRep=Repetir contraseña
+register.passwordRep.required=Repetir contraseña*
 register.nombre=Nombre
+register.nombre.required=Nombre*
 register.apellidos=Apellidos
 register.telefono=Teléfono
 register.fechaNacimiento=Fecha de nacimiento
 register.goToLogin=Ya tengo cuenta
+register.registerButton=Registrarse
