button in login page to register

--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
@@ -11,8 +11,9 @@ login.password=Contraseña
 login.password.required=Contraseña*
 login.button.login=Entrar
 login.right.reserved = 2021 Todos los derechos reservados
-
+login.button.register=Registrarse
 #register
+register.tittle=Registro de usuario
 register.email=Email
 register.email.required=Email*
 register.email.invalid=El email no es válido
