--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
@@ -11,14 +11,48 @@ login.password=Password
 login.password.required=Password*
 login.button.login=Login
 login.right.reserved = 2021 All rights reserved
-
-
+login.button.register=Sign Up
 #register
+register.tittle=User Register
 register.email=Email
+register.email.required=Email*
+register.email.invalid=Email not valid
 register.password=Password
+register.password.required=Password
 register.passwordRep=Repeat password
+register.passwordRep.required=Repeat password*
 register.nombre=Name
+register.nombre.required=Name*
 register.apellidos=Surname
 register.telefono=Phone number
 register.fechaNacimiento=Birthdate
-register.goToLogin=I've already registered
+register.goToLogin=I already have account
+register.registerButton=Sign up
+
+#Projects
+projects.button.newProject=New
+projects.button.columnas=Show/Hide columns
+projects.tittle=My projects
+projects.table.name=Name
+projects.table.code=Code
+projects.table.desc=Description
+projects.table.fecini=Starting date
+projects.table.actions=Actions
+
+projects.deleteProyectoDialog.header=Confirm
+projects.deleteProyectoDialog.message=¿Do you want to remove the project?
+projects.deleteProyectoDialog.yes=Yes
+projects.deleteProyectoDialog.no=No
+
+projects.editarProyectoDialog.header=Project details
+projects.editarProyectoDialog.name=Name
+projects.editarProyectoDialog.desc=Description
+projects.editarProyectoDialog.devs=Developers
+projects.editarProyectoDialog.devs.name=Name
+projects.editarProyectoDialog.devs.surname=Surname
+projects.editarProyectoDialog.po=Product Owner
+projects.editarProyectoDialog.sm=Scrum Master
+projects.editarProyectoDialog.fecini=Starting date
+projects.editarProyectoDialog.code=Project code (max. 5 carac.)
+projects.editarProyectoDialog.cancel=Cancel
+projects.editarProyectoDialog.save=Save
