--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
@@ -28,3 +28,31 @@ register.telefono=Teléfono
 register.fechaNacimiento=Fecha de nacimiento
 register.goToLogin=Ya tengo cuenta
 register.registerButton=Registrarse
+
+#Projects
+projects.button.newProject=Nuevo
+projects.button.columnas=Mostrar/Ocultar columnas
+projects.tittle=Mis proyectos
+projects.table.name=Nombre
+projects.table.code=Código
+projects.table.desc=Descripción
+projects.table.fecini=Fecha inicio
+projects.table.actions=Acciones
+
+projects.deleteProyectoDialog.header=Confirmar
+projects.deleteProyectoDialog.message=¿Desea eliminar el proyecto?
+projects.deleteProyectoDialog.yes=Sí
+projects.deleteProyectoDialog.no=No
+
+projects.editarProyectoDialog.header=Detalles del proyecto
+projects.editarProyectoDialog.name=Nombre
+projects.editarProyectoDialog.desc=Descripción
+projects.editarProyectoDialog.devs=Desarrolladores
+projects.editarProyectoDialog.devs.name=Nombre
+projects.editarProyectoDialog.devs.surname=Apellidos
+projects.editarProyectoDialog.po=Product Owner
+projects.editarProyectoDialog.sm=Scrum Master
+projects.editarProyectoDialog.fecini=Fecha de inicio
+projects.editarProyectoDialog.code=Código de proyecto (max. 5 carac.)
+projects.editarProyectoDialog.cancel=Cancelar
+projects.editarProyectoDialog.save=Guardar
