Story board and messages changes .

--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
@@ -51,7 +51,9 @@ projects.editarProyectoDialog.devs=Developers
 projects.editarProyectoDialog.devs.name=Name
 projects.editarProyectoDialog.devs.surname=Surname
 projects.editarProyectoDialog.po=Product Owner
+projects.editarProyectoDialog.selectpo=Select PO
 projects.editarProyectoDialog.sm=Scrum Master
+projects.editarProyectoDialog.selectsm=Select SM
 projects.editarProyectoDialog.fecini=Starting date
 projects.editarProyectoDialog.code=Project code (max. 5 carac.)
 projects.editarProyectoDialog.cancel=Cancel
