--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
@@ -2,6 +2,12 @@
 aplicacion.nombre=Scrum App
 aplicacion.version=0.0.1v
 
+#Template
+template.myprojects=Mis proyectos
+template.mytickets=Mis tickets
+template.profile=Perfil
+template.logout=Cerrar sesión
+template.settings=Configuración
 
 #Login
 login.loginTitle=Identifíquese
@@ -51,8 +57,82 @@ projects.editarProyectoDialog.devs=Desarrolladores
 projects.editarProyectoDialog.devs.name=Nombre
 projects.editarProyectoDialog.devs.surname=Apellidos
 projects.editarProyectoDialog.po=Product Owner
+projects.editarProyectoDialog.selectpo=Seleccione PO
 projects.editarProyectoDialog.sm=Scrum Master
+projects.editarProyectoDialog.selectsm=Seleccione SM
 projects.editarProyectoDialog.fecini=Fecha de inicio
 projects.editarProyectoDialog.code=Código de proyecto (max. 5 carac.)
 projects.editarProyectoDialog.cancel=Cancelar
 projects.editarProyectoDialog.save=Guardar
+
+#projectMenu
+projectMenu.backlog=Backlog
+projectMenu.board=Board
+projectMenu.sprints=Sprints
+projectMenu.details=Detalles
+
+#backlog
+backlog.table.code=Código
+backlog.table.name=Código
+backlog.table.desc=Descripción
+backlog.table.effort=Esfuerzo
+backlog.table.priority=Prioridad
+backlog.table.actions=Acciones
+backlog.button.newStory=Nueva historia
+backlog.deleteHistoriaDialog.message=Desea eliminar la Historia de Usuario?
+backlog.deleteHistoriaDialog.header=Confirmar
+backlog.deleteHistoriaDialog.yes=Sí
+backlog.deleteHistoriaDialog.no=No
+backlog.editarHistoriaDialog.name=Nombre
+backlog.editarHistoriaDialog.desc=Descripción
+backlog.editarHistoriaDialog.effort=Esfuerzo
+backlog.editarHistoriaDialog.cancel=Cancelar
+backlog.editarHistoriaDialog.save=Guardar
+
+#board
+board.news=Nuevas
+board.story.name=Nombre
+board.story.tasks=Tareas
+board.newStory=Nueva historia
+board.approved=Aprobadas
+board.delivered=Entregadas
+board.completed=Completadas
+board.editarHistoriaDialog.name=Nombre
+board.editarHistoriaDialog.desc=Nombre
+board.editarHistoriaDialog.effort=Nombre
+board.editarHistoriaDialog.state=Nombre
+board.editarHistoriaDialog.state.selectone=Seleccione estado
+board.editarHistoriaDialog.state.new=Seleccione estado
+board.editarHistoriaDialog.state.approved=Aprobada
+board.editarHistoriaDialog.state.commited=Entregada
+board.editarHistoriaDialog.state.completed=Completada
+board.editarHistoriaDialog.cancel=Cancelar
+board.editarHistoriaDialog.save=Guardar
+
+#sprints
+sprint.button.changeSprint=Cambiar sprint
+sprint.box.todo=Para hacer
+sprint.label.hours=Horas
+sprint.button.newTask=Nueva tarea
+sprint.box.inprogress=En progreso
+sprint.box.testing=Probando
+sprint.box.completed=Completadas
+sprint.editartareaDialog.header=Tarea
+sprint.editartareaDialog.name
+sprint.editartareaDialog.assignedto
+sprint.editartareaDialog.assignedto.selectone=Seleccione desarrollador
+sprint.editartareaDialog.userStory
+sprint.editartareaDialog.userStory.selectone=Seleccione Historia de Usuario
+sprint.editartareaDialog.desc
+sprint.editartareaDialog.estimation
+sprint.editartareaDialog.hoursdedicated=Horas dedicadas
+sprint.editartareaDialog.startingdate=Fecha de inicio
+sprint.editartareaDialog.endestdate=Fecha est. fin
+sprint.editartareaDialog.state=Estado de tarea
+sprint.editartareaDialog.state.selectone=Seleccione estado
+sprint.editartareaDialog.button.cancel=Cancelar
+sprint.editartareaDialog.button.save=Guardar
+
+sprint.sprintsDialog.header=Sprints
+sprint.sprintsDialog.columns=Mostrar/Ocultar columnas
+sprint.sprintsDialog.column.name=Nombre
