usability and string updates

--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_en.properties
@@ -1,7 +1,13 @@
 #General
-aplicacion.nombre=Scrum App
-aplicacion.version=0.0.1v
+aplicacion.nombre=ScrumApp
+aplicacion.version=v1.0
 
+#Template
+template.myprojects=My projects
+template.mytickets=My tickets
+template.profile=Profile
+template.logout=Log out
+template.settings=Settings
 
 #Login
 login.loginTitle=Sign in
@@ -58,3 +64,98 @@ projects.editarProyectoDialog.fecini=Starting date
 projects.editarProyectoDialog.code=Project code (max. 5 carac.)
 projects.editarProyectoDialog.cancel=Cancel
 projects.editarProyectoDialog.save=Save
+
+#projectMenu
+projectMenu.backlog=Backlog
+projectMenu.board=Board
+projectMenu.sprints=Sprints
+projectMenu.details=Detalles
+
+#backlog
+backlog.table.code=Code
+backlog.table.name=Code
+backlog.table.desc=Description
+backlog.table.effort=Effort
+backlog.table.priority=Priority
+backlog.table.actions=Actions
+backlog.button.newStory=New story
+backlog.deleteHistoriaDialog.message=Do you wanna remove the user story?
+backlog.deleteHistoriaDialog.header=Confirm
+backlog.deleteHistoriaDialog.yes=Yes
+backlog.deleteHistoriaDialog.no=No
+backlog.editarHistoriaDialog.name=Name
+backlog.editarHistoriaDialog.desc=Description
+backlog.editarHistoriaDialog.effort=Effort
+backlog.editarHistoriaDialog.cancel=Cancel
+backlog.editarHistoriaDialog.save=Save
+
+#board
+board.news=New
+board.story.name=Name
+board.story.tasks=Tasks
+board.newStory=New story
+board.approved=Approved
+board.delivered=Commited
+board.completed=Completed
+board.editarHistoriaDialog.name=Name
+board.editarHistoriaDialog.desc=Description
+board.editarHistoriaDialog.effort=Effort
+board.editarHistoriaDialog.state=State
+board.editarHistoriaDialog.state.selectone=Select state
+board.editarHistoriaDialog.state.new=Nueva
+board.editarHistoriaDialog.state.approved=Aprobada
+board.editarHistoriaDialog.state.commited=Entregada
+board.editarHistoriaDialog.state.completed=Completada
+board.editarHistoriaDialog.cancel=Cancel
+board.editarHistoriaDialog.save=Save
+
+#sprints
+sprint.button.changeSprint=Change sprint
+sprint.box.todo=To do
+sprint.label.hours=Hours
+sprint.button.newTask=New task
+sprint.box.inprogress=In progress
+sprint.box.testing=Testing
+sprint.box.completed=Completed
+sprint.editartareaDialog.header=Task
+sprint.editartareaDialog.name=Name
+sprint.editartareaDialog.assignedto=Assigned to
+sprint.editartareaDialog.assignedto.selectone=Selecct developer
+sprint.editartareaDialog.userStory=User Story
+sprint.editartareaDialog.userStory.selectone=Select user story
+sprint.editartareaDialog.desc=Description
+sprint.editartareaDialog.estimation=Estimation
+sprint.editartareaDialog.hoursdedicated=Hours dedicated
+sprint.editartareaDialog.startingdate=Start date
+sprint.editartareaDialog.endestdate=Estimated end date
+sprint.editartareaDialog.state=Task state
+sprint.editartareaDialog.state.selectone=Select state
+sprint.editartareaDialog.button.cancel=Cancel
+sprint.editartareaDialog.button.save=Save
+
+sprint.sprintsDialog.header=Sprints
+sprint.sprintsDialog.columns=Show/Hide columns
+sprint.sprintsDialog.column.name=Name
+sprint.sprintsDialog.column.startdate=Start date
+sprint.sprintsDialog.column.enddate=End date
+sprint.sprintsDialog.column.state=State
+sprint.sprintsDialog.column.actions=Actions
+sprint.sprintsDialog.column.editor.editrow=Edit sprint
+sprint.sprintsDialog.column.editor.canceledit=Cancel
+sprint.sprintsDialog.column.editor.saverow=Save sprint
+sprint.sprintsDialog.button.newsprint=New sprint
+sprint.deleteSprintDialog.header=Confirm
+sprint.deleteSprintDialog.message.removesprint=Do you wanna remove the sprint
+sprint.deleteSprintDialog.yes=Yes
+sprint.deleteSprintDialog.no=No
+
+#profile
+profile.tittle=My profile
+profile.label.name=Name
+profile.label.surname=Surname
+profile.label.email=Email
+profile.label.phone=Phone number
+profile.label.changepasswd=Change password
+profile.label.password=Password
+profile.label.repeatpwd=Repeat password
+profile.button.save=Save
