--- a/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
+++ b/scrumapp-jsf/src/main/resources/org/cfuentes/scrumapp/resources/Messages_es.properties
@@ -1,6 +1,6 @@
 #General
-aplicacion.nombre=Scrum App
-aplicacion.version=0.0.1v
+aplication.name=ScrumApp
+aplication.version=v1.0
 
 #Template
 template.myprojects=Mis proyectos
@@ -73,7 +73,7 @@ projectMenu.details=Detalles
 
 #backlog
 backlog.table.code=Código
-backlog.table.name=Código
+backlog.table.name=Nombre
 backlog.table.desc=Descripción
 backlog.table.effort=Esfuerzo
 backlog.table.priority=Prioridad
@@ -98,11 +98,11 @@ board.approved=Aprobadas
 board.delivered=Entregadas
 board.completed=Completadas
 board.editarHistoriaDialog.name=Nombre
-board.editarHistoriaDialog.desc=Nombre
-board.editarHistoriaDialog.effort=Nombre
-board.editarHistoriaDialog.state=Nombre
+board.editarHistoriaDialog.desc=Descripción
+board.editarHistoriaDialog.effort=Esfuerzo
+board.editarHistoriaDialog.state=Estado
 board.editarHistoriaDialog.state.selectone=Seleccione estado
-board.editarHistoriaDialog.state.new=Seleccione estado
+board.editarHistoriaDialog.state.new=Nueva
 board.editarHistoriaDialog.state.approved=Aprobada
 board.editarHistoriaDialog.state.commited=Entregada
 board.editarHistoriaDialog.state.completed=Completada
@@ -118,13 +118,13 @@ sprint.box.inprogress=En progreso
 sprint.box.testing=Probando
 sprint.box.completed=Completadas
 sprint.editartareaDialog.header=Tarea
-sprint.editartareaDialog.name
-sprint.editartareaDialog.assignedto
+sprint.editartareaDialog.name=Nombre
+sprint.editartareaDialog.assignedto=Asignado a
 sprint.editartareaDialog.assignedto.selectone=Seleccione desarrollador
-sprint.editartareaDialog.userStory
+sprint.editartareaDialog.userStory=Historia de usuario
 sprint.editartareaDialog.userStory.selectone=Seleccione Historia de Usuario
-sprint.editartareaDialog.desc
-sprint.editartareaDialog.estimation
+sprint.editartareaDialog.desc=Descripción
+sprint.editartareaDialog.estimation=Estimación
 sprint.editartareaDialog.hoursdedicated=Horas dedicadas
 sprint.editartareaDialog.startingdate=Fecha de inicio
 sprint.editartareaDialog.endestdate=Fecha est. fin
@@ -136,3 +136,26 @@ sprint.editartareaDialog.button.save=Guardar
 sprint.sprintsDialog.header=Sprints
 sprint.sprintsDialog.columns=Mostrar/Ocultar columnas
 sprint.sprintsDialog.column.name=Nombre
+sprint.sprintsDialog.column.startdate=Fecha de inicio
+sprint.sprintsDialog.column.enddate=Fecha de fin
+sprint.sprintsDialog.column.state=Estado
+sprint.sprintsDialog.column.actions=Acciones
+sprint.sprintsDialog.column.editor.editrow=Editar sprint
+sprint.sprintsDialog.column.editor.canceledit=Cancelar
+sprint.sprintsDialog.column.editor.saverow=Guardar sprint
+sprint.sprintsDialog.button.newsprint=Nuevo sprint
+sprint.deleteSprintDialog.header=Confirmar
+sprint.deleteSprintDialog.message.removesprint=Desea eliminar el sprint
+sprint.deleteSprintDialog.yes=Sí
+sprint.deleteSprintDialog.no=No
+
+#profile
+profile.tittle=Mi perfil
+profile.label.name=Nombre
+profile.label.surname=Apellidos
+profile.label.email=Email
+profile.label.phone=Teléfono
+profile.label.changepasswd=Cambiar contraseña
+profile.label.password=Contraseña
+profile.label.repeatpwd=Repite la contraseña
+profile.button.save=Guardar
